Got rid of C3P0. Migrated core DB classes to use Atomikos for connection pooling and test database connections.